syntax = "proto2";

package cells;

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/cells/config";

////////////////////////////////////////////////////////////////////////////////

message ZoneCells {
    repeated string Cells = 1;
}

message CellsConfig {
    // Mapping from zone ID to cell ID.
    map<string, ZoneCells> Cells = 1;

    repeated string FolderDenyList = 2;

    // If empty, every folder is included.
    repeated string FolderAllowList = 3;

    optional string StorageFolder = 4 [default = "cells"];

    optional bool CollectClusterCapacity = 5 [default = false];

    // Get cluster capacity is a heavy request, so we should use it rarely.
    optional string GetClusterCapacityInterval = 6 [default = "2h"];
}
